--- a/Single Page Design Portfolio/sass/layout/_index.scss
+++ b/Single Page Design Portfolio/sass/layout/_index.scss
@@ -1,7 +1,10 @@
-@forward 'footer';
-@forward 'grid';
-@forward 'header';
-@forward 'navigation';
-@forward 'container';
-@forward 'flex';
-@forward 'flow';
+@forward 'footer'; 
+@forward 'grid'; 
+@forward 'header'; 
+@forward 'navigation'; 
+@forward 'container'; 
+@forward 'flex'; 
+@forward 'flow'; 
+@forward 'about'; 
+@forward 'work'; 
+@forward 'services'; 
