--- a/Single Page Design Portfolio/sass/components/_box.scss
+++ b/Single Page Design Portfolio/sass/components/_box.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .box{
-    padding: rem(16);
+    padding: rem(49) rem(24);
     text-align: center;
     border-radius: rem(10);
 
@@ -16,15 +16,26 @@
     &__button{
         margin-inline: auto;
         grid-area: btn;
+        justify-self: center;
     }
 
     @include break(large){
         padding: rem(75);
+
+        & > * {
+            max-width: rem(540);
+            margin-inline: auto;
+        }
     }
 
     @include break(xlarge){
         padding: rem(65) rem(81);
         text-align: left;
+
+        & > * {
+            max-width: unset;
+            margin-inline: unset;
+        }
     }
 }
 
